if(JSRUNTIMEHOST_POLYFILL_CONSOLE)
    add_subdirectory(Console)
endif()

if(JSRUNTIMEHOST_POLYFILL_SCHEDULING)
    add_subdirectory(Scheduling)
endif()

if(JSRUNTIMEHOST_POLYFILL_XMLHTTPREQUEST)
    add_subdirectory(XMLHttpRequest)
endif()

if(JSRUNTIMEHOST_POLYFILL_FETCH)
    add_subdirectory(Fetch)
endif()

if(JSRUNTIMEHOST_POLYFILL_URL)
    add_subdirectory(URL)
endif()

if(JSRUNTIMEHOST_POLYFILL_ABORT_CONTROLLER)
    add_subdirectory(AbortController)
endif()

if(JSRUNTIMEHOST_POLYFILL_WEBSOCKET)
    add_subdirectory(WebSocket)
endif()

if(JSRUNTIMEHOST_POLYFILL_BLOB)
    add_subdirectory(Blob)
endif()

if(JSRUNTIMEHOST_POLYFILL_FILE)
    add_subdirectory(File)
endif()

if(JSRUNTIMEHOST_POLYFILL_PERFORMANCE)
    add_subdirectory(Performance)
endif()

if(JSRUNTIMEHOST_POLYFILL_TEXTDECODER)
    add_subdirectory(TextDecoder)
endif()

if(JSRUNTIMEHOST_POLYFILL_TEXTENCODER)
    add_subdirectory(TextEncoder)
endif()

if(JSRUNTIMEHOST_POLYFILL_STREAMS)
    add_subdirectory(Streams)
endif()

if(JSRUNTIMEHOST_POLYFILL_COMPRESSION)
    if(NOT JSRUNTIMEHOST_POLYFILL_STREAMS)
        message(FATAL_ERROR "The Compression polyfill requires the Streams polyfill.")
    endif()
    add_subdirectory(Compression)
endif()
